--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -9,6 +9,9 @@ brew "mas"
 # Need a better terminal emulator first
 cask "kitty"
 
+# Terminal tools
+brew "ripgrep"
+
 # Password manager
 cask "1password"
 
