--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -22,6 +22,7 @@ cask "firefox"
 # Development tools
 brew "lua" # z dependency
 brew "git"
+brew "gh" # Github CLI
 cask "jetbrains-toolbox"
 cask "insomnia"
 cask "visual-studio-code"
