Add Proton bridge & lastpass cli

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -15,6 +15,7 @@ brew "ripgrep"
 # Password manager
 cask "1password"
 cask "1password-cli"
+brew "lastpass-cli"
 
 # Browser
 cask "firefox"
@@ -30,7 +31,7 @@ cask "visual-studio-code"
 # Communication
 cask "slack"
 cask "telegram"
-cask "mattermost"
+cask "protonmail-bridge"
 
 # Notes
 cask "notion"
