Add git project pre-commit hook and install mattermost

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -37,6 +37,7 @@ cask "visual-studio-code"
 
 # Communication
 cask "slack"
+cask "mattermost"
 cask "telegram"
 cask "protonmail-bridge"
 cask "whatsapp"
