Add Aerospace install

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -55,6 +55,9 @@ cask "displaylink"
 # Magnet (window manager)
 mas "Magnet", id: 441258766
 
+# Aerospace i3 like tiling window
+cask "nikitabobko/tap/aerospace"
+
 EOF
 
 # Clone z.lua (cd command)
