--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -32,6 +32,7 @@ cask "firefox"
 # Development tools
 brew "lua" # z dependency
 brew "git"
+brew "lazygit"
 cask "bruno"
 cask "jetbrains-toolbox"
 cask "visual-studio-code"
